--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,6 +24,7 @@ jobs:
 
       - name: Build package
         run: python -m build
+        working-directory: ./
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@v1.6.0
